--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>avatar</title>
     <!-- css  -->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <!-- fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <img src="../images/head-logo.png" alt=""
+      <img src="images/head-logo.png" alt=""
       class="header-logo">
       <ul class="header-list">
         <li class="header-list-item">Головна</li>
@@ -21,7 +21,7 @@
         <li class="header-list-item">Контакти</li>
       </ul>
       <span class="header-button">Увійти</span>
-      <img src="../images/Group.png" alt="" class="group">
+      <img src="images/Group.png" alt="" class="group">
     </header>
     <main>
       <div class="avatar">
@@ -32,7 +32,7 @@
             tokx 'ì'awn slu Na'viyä hapxì.<br>
             Säwem nìayoeng!<br></li>
           <li class="main-list-item-images">
-            <img src="../images/arrow.svg" alt=""></li>
+            <img src="images/arrow.svg" alt=""></li>
           <li class="main-list-item">
             Хоробрий воїне, звертаюсь до тебе!<br>
             Твій дух йде з Ейвою,<br>
@@ -42,7 +42,7 @@
             <li class="main-list-item-button">
               Приєднатися до <br> клану</li>
         </ul>
-        <img src="../images/message.png" alt="" class="message">
+        <img src="images/message.png" alt="" class="message">
       </div>
         
       <div class="box">
@@ -51,7 +51,7 @@
           <li class="main-list-title-item-2-2">ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.” </li>
           <li class="main-list-text-item-2">Джейк Саллі</li>
           <li class="main-list-item-eagle">
-            <img src="../images/eagle.png" alt="">
+            <img src="images/eagle.png" alt="">
           </li>
         </ul>
       </div> 
@@ -66,7 +66,7 @@
           <li class="main-list-title-item-2-4">ЇЇ ДОВЕДЕТЬСЯ ПОВЕРНУТИ.”</li>
           <li class="main-list-text-item-2">Джейк Саллі</li>
           <li class="main-list-item-eagle">
-            <img src="../images/eagle.png" alt="">
+            <img src="images/eagle.png" alt="">
           </li>
         </ul>
       </div>
@@ -82,7 +82,7 @@
           <div class="card">
             <ul class="card-list">
               <li class="card-list-item-text">Привіт</li>
-              <li class="card-list-item-arrow"><img src="../images/arrow_black.png" alt="" class="images-card-list-eagle"></li>
+              <li class="card-list-item-arrow"><img src="images/arrow_black.png" alt="" class="images-card-list-eagle"></li>
               <li class="card-list-item-text">Kaltxì</li>
             </ul>
           </div>
@@ -93,7 +93,7 @@
           <div class="card">
             <ul class="card-list">
               <li class="card-list-item-text">Як справи?</li>
-              <li class="card-list-item-arrow"><img src="../images/eagle.png" alt="" class="images-card-list-eagle"></li>
+              <li class="card-list-item-arrow"><img src="images/eagle.png" alt="" class="images-card-list-eagle"></li>
               <li class="card-list-item-text">Ngaru lu fpom srak?</li>
             </ul>
           </div>
@@ -103,7 +103,7 @@
           <div class="card">
             <ul class="card-list">
               <li class="card-list-item-text">Все добре</li>
-              <li class="card-list-item-arrow-revers"><img src="../images/arrow_black.png" alt="" class="images-card-list-eagle"></li>
+              <li class="card-list-item-arrow-revers"><img src="images/arrow_black.png" alt="" class="images-card-list-eagle"></li>
               <li class="card-list-item-text">Lu fpom</li>
             </ul>
           </div>
@@ -113,7 +113,7 @@
           <div class="card">
             <ul class="card-list">
               <li class="card-list-item-text">Дякую</li>
-              <li class="card-list-item-arrow"><img src="../images/arrow_black.png" alt="" class="images-card-list-eagle"></li>
+              <li class="card-list-item-arrow"><img src="images/arrow_black.png" alt="" class="images-card-list-eagle"></li>
               <li class="card-list-item-text">Irayo si </li>
             </ul>
           </div>
@@ -123,7 +123,7 @@
           <div class="card">
             <ul class="card-list">
               <li class="card-list-item-text">Я бачу тебе</li>
-              <li class="card-list-item-arrow"><img src="../images/eagle.png" alt="" class="images-card-list-eagle"></li>
+              <li class="card-list-item-arrow"><img src="images/eagle.png" alt="" class="images-card-list-eagle"></li>
               <li class="card-list-item-text">Oel ngati kameie</li>
             </ul>
           </div>
@@ -133,7 +133,7 @@
           <div class="card">
             <ul class="card-list">
               <li class="card-list-item-text">Слідуй за мною!</li>
-              <li class="card-list-item-arrow-revers"><img src="../images/arrow_black.png" alt="" class="images-card-list-eagle"></li>
+              <li class="card-list-item-arrow-revers"><img src="images/arrow_black.png" alt="" class="images-card-list-eagle"></li>
               <li class="card-list-item-text">Nong oet!</li>
             </ul>
           </div>
@@ -152,7 +152,7 @@
     </main>
     <footer>
       <div class="box-footer">
-        <img src="../images/head-logo.png" alt=""
+        <img src="images/head-logo.png" alt=""
       class="footer-logo">
       <hr class="hr">
         <ul>
